force-app/main/default/objects/Tag__c/Tag__c.object-meta.xml
<CustomObject>
    <label>タグ</label>
    <nameField>
        <label>タグ名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>タグ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>