force-app/main/default/objects/Tag__c/fields/DevService__c.field-meta.xml
<CustomField>
    <fullName>DevService__c</fullName>
    <label>ユーザサポート</label>
    <summaryForeignKey>Relation_Service2Tag__c.Tag__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>