force-app/main/default/objects/Tag__c/fields/DevTicket__c.field-meta.xml
<CustomField>
    <fullName>DevTicket__c</fullName>
    <label>開発チケット</label>
    <summaryForeignKey>Relation_Dev2Tag__c.Tag__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>