force-app/main/default/objects/Tag__c/fields/FunctionRequirement__c.field-meta.xml
<CustomField>
    <fullName>FunctionRequirement__c</fullName>
    <label>機能要件</label>
    <summaryForeignKey>Relation_Requirements2Tag__c.Tag__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>