force-app/main/default/objects/Tag__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>課題・要望</label>
    <summaryForeignKey>Relation_Issue2Tag__c.Tag__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>