force-app/main/default/objects/Tag__c/fields/OperationFlow__c.field-meta.xml
<CustomField>
    <fullName>OperationFlow__c</fullName>
    <label>運用チャート</label>
    <summaryForeignKey>Relation_OperationFlow2Tag__c.Tag__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>