force-app/main/default/objects/Tag__c/fields/TechPlan__c.field-meta.xml
<CustomField>
    <fullName>TechPlan__c</fullName>
    <label>対応施策</label>
    <summaryForeignKey>Relation_Plan2Tag__c.Tag__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>